--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,15 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-2BQ9CXK7DX"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag () { dataLayer.push( arguments ); }
+      gtag( 'js', new Date() );
+
+      gtag( 'config', 'G-2BQ9CXK7DX' );
+    </script>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/icon.ico" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
